--- a/pages/ilanlar.html
+++ b/pages/ilanlar.html
@@ -17,7 +17,7 @@
 <body class=" ">
   <nav class="navbar navbar-expand-lg container p-3 shadow-sm rounded-4">
     <div class="container-fluid">
-      <img src="./img/logo.png" width="20%" alt="" />
+      <img src="../img/logo.png" width="20%" alt="" />
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
